--- a/team.html
+++ b/team.html
@@ -190,8 +190,6 @@
                             </div>
                             <div class="headerarea__component">
                                 <div class="headerarea__right">
-
-                                    
                                     <div class="headerarea__button">
                                         <a class="default__button" href="request.html">GET FREE QUATE</a>
                                     </div>
@@ -474,13 +472,13 @@
                                 <div class="team__member__icon">
                                     <ul>
                                         <li>
-                                            <a class="direction__btn" href="#"><i class="icofont-facebook"></i></a>
+                                            <a class="direction__btn" href="javascript:avoid()"><i class="icofont-facebook"></i></a>
                                         </li>
                                         <li>
-                                            <a class="direction__btn" href="#"><i class="icofont-twitter"></i></a>
+                                            <a class="direction__btn" href="javascript:avoid()"><i class="icofont-twitter"></i></a>
                                         </li>
                                         <li>
-                                            <a class="direction__btn" href="#"><i class="icofont-skype"></i></a>
+                                            <a class="direction__btn" href="javascript:avoid()"><i class="icofont-skype"></i></a>
                                         </li>
                                     </ul>
                                 </div>
@@ -502,13 +500,13 @@
                                 <div class="team__member__icon">
                                     <ul>
                                         <li>
-                                            <a class="direction__btn" href="#"><i class="icofont-facebook"></i></a>
+                                            <a class="direction__btn" href="javascript:avoid()"><i class="icofont-facebook"></i></a>
                                         </li>
                                         <li>
-                                            <a class="direction__btn" href="#"><i class="icofont-twitter"></i></a>
+                                            <a class="direction__btn" href="javascript:avoid()"><i class="icofont-twitter"></i></a>
                                         </li>
                                         <li>
-                                            <a class="direction__btn" href="#"><i class="icofont-skype"></i></a>
+                                            <a class="direction__btn" href="javascript:avoid()"><i class="icofont-skype"></i></a>
                                         </li>
                                     </ul>
                                 </div>
@@ -530,13 +528,13 @@
                                 <div class="team__member__icon">
                                     <ul>
                                         <li>
-                                            <a class="direction__btn" href="#"><i class="icofont-facebook"></i></a>
+                                            <a class="direction__btn" href="javascript:avoid()"><i class="icofont-facebook"></i></a>
                                         </li>
                                         <li>
-                                            <a class="direction__btn" href="#"><i class="icofont-twitter"></i></a>
+                                            <a class="direction__btn" href="javascript:avoid()"><i class="icofont-twitter"></i></a>
                                         </li>
                                         <li>
-                                            <a class="direction__btn" href="#"><i class="icofont-skype"></i></a>
+                                            <a class="direction__btn" href="javascript:avoid()"><i class="icofont-skype"></i></a>
                                         </li>
                                     </ul>
                                 </div>
@@ -557,13 +555,13 @@
                                 <div class="team__member__icon">
                                     <ul>
                                         <li>
-                                            <a class="direction__btn" href="#"><i class="icofont-facebook"></i></a>
+                                            <a class="direction__btn" href="javascript:avoid()"><i class="icofont-facebook"></i></a>
                                         </li>
                                         <li>
-                                            <a class="direction__btn" href="#"><i class="icofont-twitter"></i></a>
+                                            <a class="direction__btn" href="javascript:avoid()"><i class="icofont-twitter"></i></a>
                                         </li>
                                         <li>
-                                            <a class="direction__btn" href="#"><i class="icofont-skype"></i></a>
+                                            <a class="direction__btn" href="javascript:avoid()"><i class="icofont-skype"></i></a>
                                         </li>
                                     </ul>
                                 </div>
@@ -585,13 +583,13 @@
                                 <div class="team__member__icon">
                                     <ul>
                                         <li>
-                                            <a class="direction__btn" href="#"><i class="icofont-facebook"></i></a>
+                                            <a class="direction__btn" href="javascript:avoid()"><i class="icofont-facebook"></i></a>
                                         </li>
                                         <li>
-                                            <a class="direction__btn" href="#"><i class="icofont-twitter"></i></a>
+                                            <a class="direction__btn" href="javascript:avoid()"><i class="icofont-twitter"></i></a>
                                         </li>
                                         <li>
-                                            <a class="direction__btn" href="#"><i class="icofont-skype"></i></a>
+                                            <a class="direction__btn" href="javascript:avoid()"><i class="icofont-skype"></i></a>
                                         </li>
                                     </ul>
                                 </div>
@@ -613,13 +611,13 @@
                                 <div class="team__member__icon">
                                     <ul>
                                         <li>
-                                            <a class="direction__btn" href="#"><i class="icofont-facebook"></i></a>
+                                            <a class="direction__btn" href="javascript:avoid()"><i class="icofont-facebook"></i></a>
                                         </li>
                                         <li>
-                                            <a class="direction__btn" href="#"><i class="icofont-twitter"></i></a>
+                                            <a class="direction__btn" href="javascript:avoid()"><i class="icofont-twitter"></i></a>
                                         </li>
                                         <li>
-                                            <a class="direction__btn" href="#"><i class="icofont-skype"></i></a>
+                                            <a class="direction__btn" href="javascript:avoid()"><i class="icofont-skype"></i></a>
                                         </li>
                                     </ul>
                                 </div>
@@ -640,13 +638,13 @@
                                 <div class="team__member__icon">
                                     <ul>
                                         <li>
-                                            <a class="direction__btn" href="#"><i class="icofont-facebook"></i></a>
+                                            <a class="direction__btn" href="javascript:avoid()"><i class="icofont-facebook"></i></a>
                                         </li>
                                         <li>
-                                            <a class="direction__btn" href="#"><i class="icofont-twitter"></i></a>
+                                            <a class="direction__btn" href="javascript:avoid()"><i class="icofont-twitter"></i></a>
                                         </li>
                                         <li>
-                                            <a class="direction__btn" href="#"><i class="icofont-skype"></i></a>
+                                            <a class="direction__btn" href="javascript:avoid()"><i class="icofont-skype"></i></a>
                                         </li>
                                     </ul>
                                 </div>
@@ -667,13 +665,13 @@
                                 <div class="team__member__icon">
                                     <ul>
                                         <li>
-                                            <a class="direction__btn" href="#"><i class="icofont-facebook"></i></a>
+                                            <a class="direction__btn" href="javascript:avoid()"><i class="icofont-facebook"></i></a>
                                         </li>
                                         <li>
-                                            <a class="direction__btn" href="#"><i class="icofont-twitter"></i></a>
+                                            <a class="direction__btn" href="javascript:avoid()"><i class="icofont-twitter"></i></a>
                                         </li>
                                         <li>
-                                            <a class="direction__btn" href="#"><i class="icofont-skype"></i></a>
+                                            <a class="direction__btn" href="javascript:avoid()"><i class="icofont-skype"></i></a>
                                         </li>
                                     </ul>
                                 </div>
@@ -695,13 +693,13 @@
                                 <div class="team__member__icon">
                                     <ul>
                                         <li>
-                                            <a class="direction__btn" href="#"><i class="icofont-facebook"></i></a>
+                                            <a class="direction__btn" href="javascript:avoid()"><i class="icofont-facebook"></i></a>
                                         </li>
                                         <li>
-                                            <a class="direction__btn" href="#"><i class="icofont-twitter"></i></a>
+                                            <a class="direction__btn" href="javascript:avoid()"><i class="icofont-twitter"></i></a>
                                         </li>
                                         <li>
-                                            <a class="direction__btn" href="#"><i class="icofont-skype"></i></a>
+                                            <a class="direction__btn" href="javascript:avoid()"><i class="icofont-skype"></i></a>
                                         </li>
                                     </ul>
                                 </div>
@@ -723,13 +721,13 @@
                                 <div class="team__member__icon">
                                     <ul>
                                         <li>
-                                            <a class="direction__btn" href="#"><i class="icofont-facebook"></i></a>
+                                            <a class="direction__btn" href="javascript:avoid()"><i class="icofont-facebook"></i></a>
                                         </li>
                                         <li>
-                                            <a class="direction__btn" href="#"><i class="icofont-twitter"></i></a>
+                                            <a class="direction__btn" href="javascript:avoid()"><i class="icofont-twitter"></i></a>
                                         </li>
                                         <li>
-                                            <a class="direction__btn" href="#"><i class="icofont-skype"></i></a>
+                                            <a class="direction__btn" href="javascript:avoid()"><i class="icofont-skype"></i></a>
                                         </li>
                                     </ul>
                                 </div>
@@ -750,13 +748,13 @@
                                 <div class="team__member__icon">
                                     <ul>
                                         <li>
-                                            <a class="direction__btn" href="#"><i class="icofont-facebook"></i></a>
+                                            <a class="direction__btn" href="javascript:avoid()"><i class="icofont-facebook"></i></a>
                                         </li>
                                         <li>
-                                            <a class="direction__btn" href="#"><i class="icofont-twitter"></i></a>
+                                            <a class="direction__btn" href="javascript:avoid()"><i class="icofont-twitter"></i></a>
                                         </li>
                                         <li>
-                                            <a class="direction__btn" href="#"><i class="icofont-skype"></i></a>
+                                            <a class="direction__btn" href="javascript:avoid()"><i class="icofont-skype"></i></a>
                                         </li>
                                     </ul>
                                 </div>
@@ -778,13 +776,13 @@
                                 <div class="team__member__icon">
                                     <ul>
                                         <li>
-                                            <a class="direction__btn" href="#"><i class="icofont-facebook"></i></a>
+                                            <a class="direction__btn" href="javascript:avoid()"><i class="icofont-facebook"></i></a>
                                         </li>
                                         <li>
-                                            <a class="direction__btn" href="#"><i class="icofont-twitter"></i></a>
+                                            <a class="direction__btn" href="javascript:avoid()"><i class="icofont-twitter"></i></a>
                                         </li>
                                         <li>
-                                            <a class="direction__btn" href="#"><i class="icofont-skype"></i></a>
+                                            <a class="direction__btn" href="javascript:avoid()"><i class="icofont-skype"></i></a>
                                         </li>
                                     </ul>
                                 </div>
@@ -806,13 +804,13 @@
                                 <div class="team__member__icon">
                                     <ul>
                                         <li>
-                                            <a class="direction__btn" href="#"><i class="icofont-facebook"></i></a>
+                                            <a class="direction__btn" href="javascript:avoid()"><i class="icofont-facebook"></i></a>
                                         </li>
                                         <li>
-                                            <a class="direction__btn" href="#"><i class="icofont-twitter"></i></a>
+                                            <a class="direction__btn" href="javascript:avoid()"><i class="icofont-twitter"></i></a>
                                         </li>
                                         <li>
-                                            <a class="direction__btn" href="#"><i class="icofont-skype"></i></a>
+                                            <a class="direction__btn" href="javascript:avoid()"><i class="icofont-skype"></i></a>
                                         </li>
                                     </ul>
                                 </div>
@@ -834,13 +832,13 @@
                                 <div class="team__member__icon">
                                     <ul>
                                         <li>
-                                            <a class="direction__btn" href="#"><i class="icofont-facebook"></i></a>
+                                            <a class="direction__btn" href="javascript:avoid()"><i class="icofont-facebook"></i></a>
                                         </li>
                                         <li>
-                                            <a class="direction__btn" href="#"><i class="icofont-twitter"></i></a>
+                                            <a class="direction__btn" href="javascript:avoid()"><i class="icofont-twitter"></i></a>
                                         </li>
                                         <li>
-                                            <a class="direction__btn" href="#"><i class="icofont-skype"></i></a>
+                                            <a class="direction__btn" href="javascript:avoid()"><i class="icofont-skype"></i></a>
                                         </li>
                                     </ul>
                                 </div>
@@ -861,13 +859,13 @@
                                 <div class="team__member__icon">
                                     <ul>
                                         <li>
-                                            <a class="direction__btn" href="#"><i class="icofont-facebook"></i></a>
+                                            <a class="direction__btn" href="javascript:avoid()"><i class="icofont-facebook"></i></a>
                                         </li>
                                         <li>
-                                            <a class="direction__btn" href="#"><i class="icofont-twitter"></i></a>
+                                            <a class="direction__btn" href="javascript:avoid()"><i class="icofont-twitter"></i></a>
                                         </li>
                                         <li>
-                                            <a class="direction__btn" href="#"><i class="icofont-skype"></i></a>
+                                            <a class="direction__btn" href="javascript:avoid()"><i class="icofont-skype"></i></a>
                                         </li>
                                     </ul>
                                 </div>
@@ -877,7 +875,7 @@
 
                     <div class="col-xl-12" data-aos="fade-up" data-aos-duration="1500">
                         <div class="team__details__button text-center">
-                            <a class="default__button btn__black " href="contact.html ">JOIN WITH US</a>
+                            <a class="default__button btn__black" href="contact.html">JOIN WITH US</a>
                         </div>
                     </div>
                 </div>
