--- a/Content_Creater.html
+++ b/Content_Creater.html
@@ -442,14 +442,15 @@
                     <div class="col-xl-12">
                         <div class="breadcrumbarea__content__wraper">
                             <div class="breadcrumbarea__title">
-                                <h2 class="heading">Search Engine Optimization (SEO)</h2>
+                                <h2 class="heading"> Professional Content Creation Agency</h2>
                             </div>
                             <div class="breadcrumbarea___para">
-                                <p class="banner-width" style="max-width: 750px;"> Digital Minds On provides
-                                    full-service SEO services for organizations and companies to get them seen online,
-                                    targeted visitors, and practical results. We specialize in using the latest trends
-                                    in marketing and pairing them with the most effective techniques to drive results
-                                    that make a difference.</p>
+                                <p class="banner-width" style="max-width: 750px;"> Digital Minds focuses on designing
+                                    only the best, appealing, and relevant content that will not only grab the target
+                                    audience’s attention but also generate trust and sales. Whether a company needs to
+                                    improve its current brand image or a start-up company wants to set an image for
+                                    whatever type of product or service it sells, we have a very unique and highly
+                                    effective content creation services.</p>
                             </div>
                             <div class="banner-button">
                                 <ul class="common-button">
@@ -615,14 +616,15 @@
                     <div class="col-xl-8 col-lg-8 col-md-12 col-12">
                         <div class="service__details__wraper">
                             <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
-                                <h4>Why SEO Services from Digital Minds On?</h4>
+                                <h4>Colouring Content with Strategy</h4>
                             </div>
                             <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
-                                <p>We understand that every business is unique. We discussed above how our team of SEO
-                                    experts researches and develops tactics tailored to your objectives. Starting from
-                                    the basic SEO keyword analysis right up to the SEO strategies, we offer the complete
-                                    package of SEO optimization services to help your brand pop out of the sea of
-                                    websites. </p>
+                                <p>It’s not about writing words, even though it sounds cliché; it involves creating a
+                                    story, adding value, and engaging the target market. At Digital Minds On we know how
+                                    important content is for creating the right impression, for engagement, and for easy
+                                    conversion. Our team of brilliant content developers, graphic designers, and online
+                                    marketing experts plan and bring out the best content and designs that are best
+                                    suited to your target market and the purpose of your business.</p>
                                 <p></p>
                             </div>
                             <div class="service__details__planning" data-aos="fade-up" data-aos-duration="1500">
@@ -631,18 +633,16 @@
                                     <div class="col-xl-12 col-lg-12 col-md-6 col-sm-12">
                                         <div class="service__details__planning__inner">
                                             <div class="service__details__planning__heading">
-                                                <h2>Our SEO Services are all Encompassing</h2>
+                                                <h2>What We Offer</h2>
                                             </div>
                                             <div class="service__details__planning__text">
                                                 <div class="service__details__planning__heading">
-                                                    <h3>Keyword Research and Analysis</h3>
+                                                    <h3>Blog Writing</h3>
                                                 </div>
-                                                <p>The key to effective SEO is to choose the right keywords for the
-                                                    business to market. We do thorough SEO keyword analysis to come up
-                                                    with words that would be of interest to your audience and in line
-                                                    with the search term. Using the metrics of search volume,
-                                                    competition, and relevance, you know that your content targets the
-                                                    keywords that are valuable for your business.</p>
+                                                <p>Blogs are a powerful and useful tool to post information, offer
+                                                    knowledge in the digital sphere, and become an expert in your field.
+                                                    Our professional blog writers produce quality, informative, and
+                                                    persuasive blog articles that create traffic to your site.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -650,57 +650,49 @@
                             </div>
 
                             <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
-                                <h4>On-Page Optimization</h4>
+                                <h4>Website Content</h4>
                             </div>
                             <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
-                                <p>We make an adjustment on your website to ensure that your site is more search engine
-                                    friendly which is achieved through SEO of key meta tags, headers, URL structures,
-                                    associated images, and even the ability for the site to be accessed by a smartphone
-                                    and the time it takes for the page to fully load. As for our website SEO analysis no
-                                    page or component of your site will ever fail to follow best practices for optimized
-                                    rankings.</p>
+                                <p>Your website is you, and the content is the face of the business, so it should hold
+                                    the theme. In copying for your website, we offer strong language, conveying your
+                                    message quickly, engaging with your visitors, and prompting them to do something.
+                                </p>
 
                             </div>
                             <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
-                                <h4>Writing and SErating</h4>
+                                <h4>Social Media Content</h4>
                             </div>
                             <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
-                                <p>The main and foundational aspect of SEO is the creation of high-quality and relevant
-                                    content. These SEO copywriting services come up with the right content that builds
-                                    the best strategies to build blogs, landing pages, and articles. This way
-                                    incorporating the keywords we are able to avoid keyword stuffing and still enhance
-                                    the usability and search engine authority of a website.</p>
+                                <p>Today social networks are the pulse of communication and interaction. Our creative
+                                    group creates effective posts, captions, messages, and campaigns for engagement,
+                                    broadening the audience, and increasing the brand’s presence in social networks.</p>
 
                             </div>
                             <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
-                                <h4>Technical SEO</h4>
+                                <h4>Video Scripts and Storyboarding</h4>
                             </div>
                             <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
-                                <p>Website technology is paramount when it comes to the optimization process. Our
-                                    semantic technical SEO services involve fixing crawl errors, performing site
-                                    architecture enhancement, structured data, and site speed. We carry out advanced SEO
-                                    competitor analysis to compare the performance of your site to competitors for
-                                    assessment of opportunities for enhancement.</p>
+                                <p>Videos captivate the hearts of the viewers and make it easy to convey any story.
+                                    Whether for advertising or to explain products or services, we create powerful
+                                    scripts and accurate storyboards that turn your visions into works of art and into
+                                    videos that will engage your audience.</p>
 
                             </div>
                             <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
-                                <h4>Link Building</h4>
+                                <h4>Copywriting Services</h4>
                             </div>
                             <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
-                                <p>Effective link building is one of the key drivers of increasing the site's rank and
-                                    improving its performance. We use white hat SEO link-building techniques which
-                                    involve linking from reputable sites and adding high value to your domain while
-                                    obeying SE rules.</p>
+                                <p>Words have the power to sell. We strive to make persuasive and even more active copy
+                                    for the advertisement, emails, descriptions of the products, etc.</p>
 
                             </div>
                             <div class="service__details__heading" data-aos="fade-up" data-aos-duration="1500">
-                                <h4> Local SEO</h4>
+                                <h4> E-books and Whitepapers</h4>
                             </div>
                             <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
-                                <p>For businesses interested in local markets, our Local SEO services have your business
-                                    indexed to appear in local search results and Google My Business. This way, your
-                                    brand continues to be noticed by the customers who are around to patronize your
-                                    services immediately.</p>
+                                <p>For companies, which want to reap the benefits of thought leadership our team
+                                    provides you with e-books and white papers that are professionally developed and
+                                    contain valuable thoughts and information that is relevant to your audience.</p>
 
                             </div>
 
@@ -822,20 +814,40 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="service__details__text" data-aos="fade-up" data-aos-duration="1500">
-                            <p>Duis ultricies lacus sed turpis
-                                tincidunt id aliquet risus feugiat. Aenean vel elit scelerisque mauris pellentesque
-                                pulvinar. Turpis egestas maecenas pharetra convallis. Ac turpis egestas maecenas
-                                pharetra convallis. Morbi tincidunt augue interdum velit euismod. Accumsan sit amet
-                                nulla facilisi morbi tempus. Scelerisque eleifend donec pretium vulputate sapien nec
-                                sagittis aliquam.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
-                                incididunt ut labore et dolore magna aliqua. Odio facilisis mauris sit amet massa
-                                vitae tortor condimentum. Etiam sit amet nisl purus in mollis nunc sed. Quam
-                                vulputate dignissim suspendisse in est ante in. Amet commodo nulla facilisi nullam
-                                vehicula. Arcu vitae elementum curabitur vitae nunc. Duis ultricies lacus sed turpis
-                                tincidunt id aliquet risus feugiat. Aenean vel elit scelerisque mauris pellentesque
-                                pulvinar.</p>
+                        <div class="service__details__planning__text">
+                            <div class="service__details__planning__heading">
+                                <h3>Creative Content Campaigns</h3>
+                            </div>
+                            <p>Any great content must create unique ways of presenting it to the public. Whether your
+                                goal is to launch a product, generate brand recognition or consumer interest, or to
+                                encourage consumption, we come up with and run unique and captivating promotional
+                                strategies and advertisements.</p>
+                        </div>
+                        <div class="service__details__planning__text">
+                            <div class="service__details__planning__heading">
+                                <h2>The Digital Minds On Approach</h2>
+                            </div>
+                            <div class="service__details__planning__heading">
+                                <h3>Understanding Your Vision</h3>
+                            </div>
+                            <p>To do this, we first carry out a comprehensive analysis of your industry, target market,
+                                and objectives. We come up with content strategies that are a reflection of your brand.
+                            </p>
+                        </div>
+                        <div class="service__details__planning__text">
+                            <div class="service__details__planning__heading">
+                                <h3>Creative Collaboration</h3>
+                            </div>
+                            <p>Customer care is a central aspect of our team’s function, especially as we help you to refine ideas and concepts to actualize your vision. What’s more, each piece of content is in line with the brand you wish to convey and communicates this clearly.</p>
+                        </div>
+                        <div class="service__details__planning__text">
+                            <div class="service__details__planning__heading">
+                                <h3>Blog Writing</h3>
+                            </div>
+                            <p>Blogs are a powerful and useful tool to post information, offer
+                                knowledge in the digital sphere, and become an expert in your field.
+                                Our professional blog writers produce quality, informative, and
+                                persuasive blog articles that create traffic to your site.</p>
                         </div>
                         <div class="service__details__button" data-aos="fade-up" data-aos-duration="1500">
                             <a class="default__button" href="#">GET A FREE QUOTE</a>
